# notion-rainbowify

./: Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js
.github/workflows/: general.yml  rustdoc.yml
implementors/clap/derive/: trait.Args.js  trait.CommandFactory.js  trait.FromArgMatches.js  trait.Parser.js
implementors/core/clone/: trait.Clone.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
notion_rainbowify/: all.html  constant.ACE_PRIDE.html  constant.BI_PRIDE_THREE.html  constant.BI_PRIDE_THREE_BACKGROUND.html  constant.GAY_PRIDE_RAINBOW_SEVEN.html  constant.GAY_PRIDE_RAINBOW_SEVEN_BACKGROUND.html  constant.GAY_PRIDE_RAINBOW_SIX.html  constant.GAY_PRIDE_RAINBOW_SIX_BACKGROUND.html  constant.LESBIAN_PRIDE_FIVE.html  constant.LESBIAN_PRIDE_SIX.html  constant.TRANS_PRIDE.html  fn.extract_element_id_from_link.html  fn.main.html  fn.rainbowify.html  fn.rainbowify_repeating.html  fn.rainbowify_with_automated_size.html  index.html  sidebar-items.js  struct.Cli.html
notion_rainbowify/configuration/: constant.CONFIG_FILE_EXTENSION.html  constant.CONFIG_FILE_NAME.html  constant.PROJECT_APPLICATION_NAME.html  constant.PROJECT_ORGANIZATION.html  constant.PROJECT_QUALIFIER.html  fn.get_config_file_path.html  fn.get_project_dirs.html  index.html  sidebar-items.js  struct.AppConfig.html
src/: configuration.rs  main.rs
src/notion_rainbowify/: configuration.rs.html  main.rs.html
(+4 files in other folders)
